@@ -1,13 +1,14 @@
 package eye.on.the.money.service.stock.impl;
 
 import eye.on.the.money.dto.out.DividendDTO;
-import eye.on.the.money.model.User;
 import eye.on.the.money.model.Currency;
+import eye.on.the.money.model.User;
 import eye.on.the.money.model.stock.Dividend;
 import eye.on.the.money.model.stock.Stock;
 import eye.on.the.money.repository.forex.CurrencyRepository;
 import eye.on.the.money.repository.stock.DividendRepository;
 import eye.on.the.money.repository.stock.StockRepository;
+import eye.on.the.money.service.impl.UserServiceImpl;
 import eye.on.the.money.service.stock.DividendService;
 import org.apache.commons.csv.CSVFormat;
 import org.apache.commons.csv.CSVParser;
@@ -45,11 +46,14 @@ public class DividendServiceImpl implements DividendService {
     private StockRepository stockRepository;
 
     @Autowired
+    private UserServiceImpl userService;
+
+    @Autowired
     private ModelMapper modelMapper;
 
     @Override
-    public List<DividendDTO> getDividends(Long userId) {
-        return this.dividendRepository.findByUser_IdOrderByDividendDate(userId).stream().map(this::convertToDividendDTO).collect(Collectors.toList());
+    public List<DividendDTO> getDividends(String userEmail) {
+        return this.dividendRepository.findByUserEmailOrderByDividendDate(userEmail).stream().map(this::convertToDividendDTO).collect(Collectors.toList());
     }
 
     private DividendDTO convertToDividendDTO(Dividend dividend) {
@@ -59,9 +63,10 @@ public class DividendServiceImpl implements DividendService {
 
     @Transactional
     @Override
-    public DividendDTO createDividend(DividendDTO dividendDTO, User user) {
+    public DividendDTO createDividend(DividendDTO dividendDTO, String userEmail) {
         Currency currency = this.currencyRepository.findById(dividendDTO.getCurrencyId()).orElseThrow(NoSuchElementException::new);
         Stock stock = this.stockRepository.findByShortName(dividendDTO.getShortName()).orElseThrow(NoSuchElementException::new);
+        User user = this.userService.loadUserByEmail(userEmail);
 
         Dividend dividend = Dividend.builder()
                 .amount(dividendDTO.getAmount())
@@ -77,10 +82,10 @@ public class DividendServiceImpl implements DividendService {
 
     @Transactional
     @Override
-    public DividendDTO updateDividend(DividendDTO dividendDTO, User user) {
+    public DividendDTO updateDividend(DividendDTO dividendDTO, String userEmail) {
         Currency currency = this.currencyRepository.findById(dividendDTO.getCurrencyId()).orElseThrow(NoSuchElementException::new);
         Stock stock = this.stockRepository.findByShortName(dividendDTO.getShortName()).orElseThrow(NoSuchElementException::new);
-        Dividend dividend = this.dividendRepository.findByIdAndUser_Id(dividendDTO.getDividendId(), user.getId()).orElseThrow(NoSuchElementException::new);
+        Dividend dividend = this.dividendRepository.findByIdAndUserEmail(dividendDTO.getDividendId(), userEmail).orElseThrow(NoSuchElementException::new);
 
         dividend.setDividendDate(dividendDTO.getDividendDate());
         dividend.setCurrency(currency);
@@ -92,17 +97,17 @@ public class DividendServiceImpl implements DividendService {
 
     @Transactional
     @Override
-    public void deleteDividendById(List<Long> ids, User user) {
-        this.dividendRepository.deleteByUser_idAndIdIn(user.getId(), ids);
+    public void deleteDividendById(List<Long> ids, String userEmail) {
+        this.dividendRepository.deleteByUserEmailAndIdIn(userEmail, ids);
     }
 
     @Override
-    public void getCSV(Long userId, Writer writer) {
+    public void getCSV(String userEmail, Writer writer) {
         List<DividendDTO> dividendListList =
-                this.dividendRepository.findByUser_IdOrderByDividendDate(userId)
+                this.dividendRepository.findByUserEmailOrderByDividendDate(userEmail)
                         .stream()
-                        .map(this::convertToDividendDTO).
-                        collect(Collectors.toList());
+                        .map(this::convertToDividendDTO)
+                        .toList();
         try (CSVPrinter csvPrinter = new CSVPrinter(writer, CSVFormat.DEFAULT)) {
             if (!dividendListList.isEmpty()) {
                 csvPrinter.printRecord("Dividend Id", "Amount", "Dividend Date", "Short Name", "Currency");
@@ -119,7 +124,7 @@ public class DividendServiceImpl implements DividendService {
 
     @Transactional
     @Override
-    public void processCSV(User user, MultipartFile file) {
+    public void processCSV(String userEmail, MultipartFile file) {
         try (BufferedReader fileReader = new BufferedReader(new InputStreamReader(file.getInputStream(), StandardCharsets.UTF_8));
              CSVParser csvParser = new CSVParser(fileReader, CSVFormat.Builder.create()
                      .setHeader("Dividend Id", "Amount", "Dividend Date", "Short Name", "Currency")
@@ -141,11 +146,11 @@ public class DividendServiceImpl implements DividendService {
                         .build();
 
                 if (!dividendId.isEmpty() &&
-                        this.dividendRepository.findByIdAndUser_Id(Long.parseLong(dividendId), user.getId()).isPresent()) {
+                        this.dividendRepository.findByIdAndUserEmail(Long.parseLong(dividendId), userEmail).isPresent()) {
                     dividend.setDividendId(Long.parseLong(dividendId));
-                    this.updateDividend(dividend, user);
+                    this.updateDividend(dividend, userEmail);
                 } else {
-                    this.createDividend(dividend, user);
+                    this.createDividend(dividend, userEmail);
                 }
             }
         } catch (IOException | ParseException e) {
